tests/data-oblivious/set_intersect/error.txt
Loading:
Loading:
Loading: 0 packages loaded
Analyzing: target //tools:heir-opt (0 packages loaded, 0 targets configured)
INFO: Analyzed target //tools:heir-opt (0 packages loaded, 0 targets configured).
 checking cached actions
INFO: Found 1 target...
[4 / 84] [Prepa] BazelWorkspaceStatusAction stable-status.txt
Target //tools:heir-opt up-to-date:
  bazel-bin/tools/heir-opt
INFO: Elapsed time: 4.912s, Critical Path: 0.27s
INFO: 1 process: 1 internal.
INFO: Build completed successfully, 1 total action
INFO: Running command line: bazel-bin/tools/heir-opt '--mlir-to-openfhe-bgv=entry-function=set_intersect ciphertext-degree=16' /home/mdemissi/heir/tests/data-oblivious/set_intersect/set_intersect.mlir
/home/mdemissi/heir/tests/data-oblivious/set_intersect/set_intersect.mlir:48:1: error: failed to legalize operation 'secret.generic' that was explicitly marked illegal
func.func @set_intersect(%setA: tensor<16xi16>, %setB: tensor<16xi16>) -> tensor<16xi1>{
^
/home/mdemissi/heir/tests/data-oblivious/set_intersect/set_intersect.mlir:48:1: note: see current operation:
%22 = "secret.generic"(%19, %21) ({
^bb0(%arg1293: i16, %arg1294: i16):
  %1585 = "arith.cmpi"(%arg1293, %arg1294) <{predicate = 0 : i64}> {target_slot = 0 : index} : (i16, i16) -> i1
  "secret.yield"(%1585) : (i1) -> ()
}) : (!secret.secret<i16>, !secret.secret<i16>) -> !secret.secret<i1>
